[project]
name = "crypto-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "vadersentiment>=3.3.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
